--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c  #1
 osx_image: xcode7.1 #2
 xcode_workspace: Example/Bean.xcworkspace #3
-xcode_scheme: BeanTests #4
+xcode_scheme: Bean #4
 xcode_sdk: iphonesimulator #5
